tests/ui/associated-inherent-types/not-found-self-type-differs-shadowing-trait-item.uncovered.stderr
error[E0223]: ambiguous associated type
  --> $DIR/not-found-self-type-differs-shadowing-trait-item.rs:28:12
   |
LL |     let _: S::<bool>::Pr = ();
   |            ^^^^^^^^^^^^^ help: use the fully-qualified path: `<S<bool> as Tr>::Pr`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
